--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@ body {
     font-family: "Rubik", sans-serif;
 }
 .container {
-    border: 1px solid red;
     width: fit-content;
     height: fit-content;
     padding: 26px;
@@ -20,11 +19,13 @@ body {
     flex-direction: column;
     align-items: center;
     border-radius: 48px;
+    background-color: #2D2A37;
+    /*border: outset rgba(0, 0, 0, .1);*/
+    box-shadow: 0px 0px 5px black;
 }
 .screen {
     width: 288px;
     height: 86px;
-    border: 1px solid red;
     margin-bottom: 26px;
     display: flex;
     flex-direction: column;
@@ -34,14 +35,12 @@ body {
     padding-right: 22px;
 }
 .operation {
-    border: 1px solid purple;
     display: flex;
     justify-content: end;
     font-size: 20px;
     color: #6B6B6B;
 }
 .result {
-    border: 1px solid green;
     display: flex;
     justify-content: space-between;
     font-size: 36px;
@@ -50,5 +49,31 @@ body {
 .numbers_signals {
     width: 292px;
     height: 368px;
-    border: 1px solid red;
+    display: grid;
+    grid-template-columns: 64px 64px 64px 64px;
+    justify-content: space-between;
+    gap: 12px;
+}
+.button {
+    width: 64px;
+    height: 64px;
+    border-radius: 999px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    color: #EBEBEB;
+    box-shadow: 0px 0px 3px black;
+}
+.comma {
+    font-size: 36px;
+}
+.ce {
+    color: #975DFA;
+}
+.operations {
+    background-color: #462878;
+}
+.iqual-button {
+    background-color: #7F45E2;
 }
