--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
     gap: 8px;
     padding-left: 18px;
     padding-right: 22px;
+    margin-top: 26px;
 }
 .operation {
     display: flex;
